[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "enjilib-jwt-auth"
version = "0.1.0"
description = "JWT authentication utilities for Enji microservices"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Enji Team"}]
keywords = ["jwt", "authentication", "microservices"]

dependencies = [
    "pyjwt>=2.8.0",
    "cryptography>=44.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
enjilib_jwt = ["py.typed"]
